update js plugin

--- a/themes/hiruko/layouts/partials/header.html
+++ b/themes/hiruko/layouts/partials/header.html
@@ -54,7 +54,7 @@
 
 <!--abc files for post -->
 {{- if eq .Params.abcjs true }}
-<script src="/js/abcjs_basic_5.6.7-min.js"></script>
+<script src="/js/abcjs_basic_6.0.0-beta3-min.js"></script>
 {{- end }}
 
   {{- if eq .Params.image true }}
