--- a/themes/hiruko/layouts/shortcodes/wp.html
+++ b/themes/hiruko/layouts/shortcodes/wp.html
@@ -61,4 +61,4 @@
 {{ end }}
 
 
-<a href="https://{{ $.Scratch.Get "wp_lang" }}.wikipedia.org/wiki/{{ $.Scratch.Get "wp_tag" }}">{{ $.Scratch.Get "wp_title" }}</a>
+<a href="https://{{ $.Scratch.Get "wp_lang" }}.wikipedia.org/wiki/{{ $.Scratch.Get "wp_tag" }}" target="_blank">{{ $.Scratch.Get "wp_title" }}</a>
