--- a/themes/hiruko/layouts/shortcodes/imgur.html
+++ b/themes/hiruko/layouts/shortcodes/imgur.html
@@ -1,4 +1,4 @@
-<div class="embed imgur-image">
+<div align=center class="embed imgur-image">
 <blockquote class="imgur-embed-pub" lang="en" data-id="a/{{ .Get "id" }}">
 <a href="//imgur.com/{{ .Get "id" }}"></a>
 </blockquote>
