--- a/themes/hiruko/layouts/shortcodes/attachments.html
+++ b/themes/hiruko/layouts/shortcodes/attachments.html
@@ -1,3 +1,4 @@
+{{ $_hugo_config := `{ "version": 1 }` }}
 <section class="attachments {{ with .Get "style"}}{{.}}{{ end }}">
 	<label>
 		<i class="fa fa-paperclip" aria-hidden="true"></i>
