--- a/themes/hiruko/static/css/main.css
+++ b/themes/hiruko/static/css/main.css
@@ -2626,3 +2626,23 @@ cursor: pointer;
 
 /******* Search Box****/
 
+/* Panda 404 CSS*/
+.panda-bg {
+  background-color: #3A73B9;
+  padding-bottom: 30px;
+}
+.panda-image {
+  padding-left: 38%;
+}
+.panda-title {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 80px;
+  line-height: 120%;
+}
+.panda-message {
+  color: #fff;
+  font-size: 20px;
+  line-height: 120%;
+}
+
