--- a/themes/hiruko/layouts/404.html
+++ b/themes/hiruko/layouts/404.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12 clearfix">
       <img src="/img/panda_404.png" alt="" class="img-responsive panda-image">
-      <h2 class="panda-title text-center">Ooooops, it's gone :(</h2>
+      <h2 class="panda-title text-center">Oops, it's gone :(</h2>
       <p class="panda-message text-center">The very essence of romance is uncertainty<br>Looks like angry panda has eaten the page you are looking for</p>
         <h1 style="text-align: center">
             <a href="{{ "/" | relURL }}">-->> May surprise you here <<--</a>
