--- a/themes/hiruko/static/css/main-vertical.css
+++ b/themes/hiruko/static/css/main-vertical.css
@@ -128,6 +128,47 @@ a img {
 /*  2. BASE CSS
 /*-----------------------------------------------------------------------------------*/
 
+.logo-normal {
+  filter: invert(0%)!important;
+}
+
+.logo-inverted {
+  filter: invert(100%)!important;
+}
+
+.bg-black {
+  background-color: #252525!important;
+  }
+
+.text-dark {
+    color: #000!important;
+}
+
+.text-white {
+    color: #bdcadb!important;
+}
+
+.text-primary {
+    color: #7a7a7a!important;
+}
+
+.text-warning {
+    color: #ffc107!important;
+}
+
+.body_OBG {
+  background-color: rgba(246, 247, 249, 1)!important;
+}
+
+.body_NBG {
+  background-color: rgb(60, 63, 70)!important;
+}
+
+.zoomlink:hover {
+    color:#bfc257;
+    cursor: pointer;
+    }
+
 body {
   font-family: var(--serif-font);
   font-style: normal;
@@ -1117,4 +1158,54 @@ transition: all .3s;
   color: #fff;
   font-size: 20px;
   line-height: 120%;
+}
+
+
+/* dark mode CSS*/
+@media (prefers-color-scheme: dark) {
+
+.hiruko-container {
+   background-color: #252525!important;
+}
+
+.post-item-link {
+  filter: invert(100%)!important;
+}
+
+.pagination {
+  filter: invert(100%)!important;
+}
+
+h3 { filter: invert(100%); }
+
+.logo-normal {
+  filter: invert(100%)!important;
+}
+
+.bg-white {
+  background-color: #252525!important;
+  }
+
+.archive  {
+  filter: invert(100%)!important;
+}
+
+.about-me-text {
+  filter: invert(100%)!important;
+}
+
+
+.text-dark {
+    color: #bdcadb!important;
+}
+
+.body_OBG {
+  background-color: rgb(60, 63, 70)!important;
+}
+
+.zoomlink:hover {
+    color:#bfc257;
+    cursor: pointer;
+    }
+
 }
