--- a/themes/hiruko/static/css/main.css
+++ b/themes/hiruko/static/css/main.css
@@ -2660,6 +2660,10 @@ cursor: pointer;
   filter: invert(100%)!important;
 }
 
+.post-item span{
+  filter: invert(100%)!important;
+}
+
 .pagination {
   filter: invert(100%)!important;
 }
