add lots of old posts & update some js

--- a/themes/hiruko/layouts/partials/abcjs.html
+++ b/themes/hiruko/layouts/partials/abcjs.html
@@ -1,5 +1,5 @@
 <!-- abcjs has to be placed on head -->
 <!-- ABCJS - music notation -->
 {{ if .Params.abcjs }}
-<script src='{{ "/js/abcjs_basic_5.6.7-min.js" | relURL }}'></script>
+<script src='{{ "/js/abcjs_basic_6.0.0-beta3-min.js" | relURL }}'></script>
 {{ end }}
