--- a/themes/hiruko/layouts/partials/after-footer.html
+++ b/themes/hiruko/layouts/partials/after-footer.html
@@ -1,4 +1,4 @@
-<script src="{{ $.Site.Params.CDN.vanillaback2top.Path }}/vanillaback2top/{{ $.Site.Params.CDN.vanillaback2top.Version }}/vanilla-back-to-top.min.js"></script>
+<script src="{{ $.Site.Params.CDN.vanillaback2top.Path }}/npm/vanilla-back-to-top@{{ $.Site.Params.CDN.vanillaback2top.Version }}/dist/vanilla-back-to-top.min.js"></script>
 <script>addBackToTop({
   diameter: 50,
   backgroundColor: '#fff',
