--- a/themes/hiruko/layouts/partials/aplayer.html
+++ b/themes/hiruko/layouts/partials/aplayer.html
@@ -6,4 +6,4 @@
 <link href="{{ $.Site.Params.CDN.Aplayer.Path }}/aplayer/{{ $.Site.Params.CDN.Aplayer.Version }}/APlayer.min.css" rel="stylesheet">
 <script src="{{ $.Site.Params.CDN.Aplayer.Path }}/aplayer/{{ $.Site.Params.CDN.Aplayer.Version }}/APlayer.min.js"></script>
 <!-- Import meting.js -->
-<script src="{{ $.Site.Params.CDN.Meting.Path }}/Meting/{{ $.Site.Params.CDN.Meting.Version }}/Meting.min.js"></script>
+<script src="{{ $.Site.Params.CDN.Meting.Path }}/npm/meting@{{ $.Site.Params.CDN.Meting.Version }}/dist/Meting.min.js"></script>
