--- a/themes/hiruko/layouts/partials/header.html
+++ b/themes/hiruko/layouts/partials/header.html
@@ -43,8 +43,8 @@
 
 <!-- mermaid for post -->
 {{- if eq .Params.Mermaid true }}
-<script src="{{ $.Site.Params.CDN.Mermaid.Path }}/Mermaid/{{ $.Site.Params.CDN.Mermaid.Version }}/mermaid.min.js" ></script>
-<link rel="stylesheet" href="{{ $.Site.Params.CDN.Mermaid.Path }}/Mermaid/{{ $.Site.Params.CDN.Mermaid.Version }}/mermaid.css" type="text/css" >
+<script src="{{ $.Site.Params.CDN.Mermaid.Path }}/mermaid/{{ $.Site.Params.CDN.Mermaid.Version }}/mermaid.min.js" ></script>
+<link rel="stylesheet" href="{{ $.Site.Params.CDN.Mermaid.Path }}/mermaid/{{ $.Site.Params.CDN.Mermaid.Version }}/mermaid.css" type="text/css" >
 {{- end }}
 
 <!-- douban.js for post -->
