--- a/themes/hiruko/layouts/partials/post.html
+++ b/themes/hiruko/layouts/partials/post.html
@@ -2,12 +2,7 @@
   <article class="post-block">
     <h1 class="post-title text-dark">{{ .Title }}</h1>
     <div class="post-info text-dark">
-      <i class="fa fa-calendar-plus-o"></i><span>&nbsp;{{ .Date.Format "2006年1月2日" }}&nbsp;&nbsp;&nbsp;</span>
-              {{ if .Site.Params.readingtime }}
-              <i class="fa fa-file-word-o"></i><span>&nbsp;约 {{ .WordCount }} 字&nbsp;&nbsp;&nbsp;</span>
-              <i class="fa fa-clock-o"></i><span>&nbsp;需时 {{ .ReadingTime }} 分钟&nbsp;&nbsp;&nbsp;</span>
-               {{ if .Site.Params.NightMode }}<i class="fa fa-toggle-off fa-lg zoomlink" id="toggle" onclick="toggleTheme()" ></i><span>夜间模式</span> {{ end }}
-          {{ end }}
+      {{ partial "post-info.html"  . }}
         </div>
     <div class="post-entry text-dark">{{ .Content | replaceRE "<p><img src=\"([^\"]+)\" alt=\"([^\"]+)\" /></p>" "<figure><img src=\"$1\" alt=\"$2\"><figcaption>$2</figcaption></figure>" | safeHTML }}</div>
  {{ partial "sharing.html" . }}
