--- a/themes/hiruko/layouts/partials/footer.html
+++ b/themes/hiruko/layouts/partials/footer.html
@@ -3,5 +3,6 @@
     <p>Copyright © &nbsp;{{ $.Site.Params.Copyright.Name }}&nbsp;{{ $.Site.Params.Copyright.From }} - {{ $.Site.Params.Copyright.To }}&nbsp;|&nbsp;
       Proudly&nbsp;Generated&nbsp;By&nbsp;<a href="https://gohugo.io/" target="_blank">Hugo&nbsp;v{{ hugo.Version }}</a>
     </p>
+	<p><span id="busuanzi_container_site_pv">本站访问量：<span id="busuanzi_value_site_pv"></span>次</span>&nbsp;<span id="busuanzi_container_site_uv">您是第 <span id="busuanzi_value_site_uv"></span> 位访问者</span></p>
   </div>
 </footer>
