--- a/themes/hiruko/layouts/partials/header.html
+++ b/themes/hiruko/layouts/partials/header.html
@@ -36,9 +36,9 @@
 
 
 {{ if isset .Site.Params "busuanzi" }}
-<!-- 不蒜子 -->
+<!-- busuanzi -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<!-- 不蒜子计数初始值纠正 -->
+<!-- busuanziSiteOffset -->
 <script>
     $(document).ready(function() {
         var int = setInterval(fixCount, 100);
