--- a/themes/hiruko/layouts/partials/sharing.html
+++ b/themes/hiruko/layouts/partials/sharing.html
@@ -43,7 +43,7 @@
       <span>
       <a class="douban"
          href="http://www.douban.com/share/service&quest;text={{ .Permalink | html }}&amp;title={{ .Title | html }}"
-         target="_blank">豆</a>
+         target="_blank"><b>豆</b></a>
     </span>
   </div>
 <!-- </div>  -->
